force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Activity_Status__c</fullName>
    <label>Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted Often</fullName>
            </value>
            <value>
                <fullName>Needs Attention</fullName>
            </value>
            <value>
                <fullName>Never Contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>