force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Average_Donation__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Average_Donation__c</fullName>
    <label>Average Donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>