force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Child_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Child_Record_Id__c</fullName>
    <label>Child RecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>