force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Child_SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Child_SObject_Type__c</fullName>
    <label>Child SObject Type</label>
    <length>70</length>
    <type>Text</type>
</CustomField>