force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Count_of_Donations_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Count_of_Donations_Last_Year__c</fullName>
    <label>Count of Donations Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>