force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Donor_Status__c</fullName>
    <description>The status of the current donor</description>
    <label>Donor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospective Donor</fullName>
                <default>true</default>
                <label>Prospective Donor</label>
            </value>
            <value>
                <fullName>Active Donor</fullName>
            </value>
            <value>
                <fullName>Lapsed Donor</fullName>
            </value>
            <value>
                <fullName>Major Donor</fullName>
            </value>
            <value>
                <fullName>Top Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>