force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Event_Participation_Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Event_Participation_Status__c</fullName>
    <label>Event Participation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Participant</fullName>
            </value>
            <value>
                <fullName>Seldom Participant</fullName>
            </value>
            <value>
                <fullName>Never Participated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>