force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Events_Attended__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Events_Attended__c</fullName>
    <label>Number Of Events Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>