force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__First_Event_Attended__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__First_Event_Attended__c</fullName>
    <label>First Event Attended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>