force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__First_Event_Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__First_Event_Attended_Date__c</fullName>
    <label>First Event Attended Date</label>
    <type>Date</type>
</CustomField>