force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__First_Task_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__First_Task_Date__c</fullName>
    <label>First Task Date</label>
    <type>Date</type>
</CustomField>