force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Five_Years_Ago_Donation_Summary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Five_Years_Ago_Donation_Summary__c</fullName>
    <label>5 years ago donation summary</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>