force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__gave_more_this_year_then_last_year__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__gave_more_this_year_then_last_year__c</fullName>
    <formula>OneCRM__YTD_Income_Summary__c &gt; OneCRM__Last_Year_Income_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gave More This Year Then Last Year</label>
    <type>Checkbox</type>
</CustomField>