force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Greater_YOY_Donation_Sum__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Greater_YOY_Donation_Sum__c</fullName>
    <formula>OneCRM__YTD_Donation_Summary__c &gt; OneCRM__Last_Year_Donation_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year Sum &gt; Last Year Sum</label>
    <type>Checkbox</type>
</CustomField>