force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Largest_Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Largest_Donation_Date__c</fullName>
    <label>Largest Donation Date</label>
    <type>Date</type>
</CustomField>