force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Last_Year_Donation_Summary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Last_Year_Donation_Summary__c</fullName>
    <label>Last Year donation summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>