force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Latest_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Latest_Activity_Date__c</fullName>
    <label>Latest Activity Date</label>
    <type>Date</type>
</CustomField>