force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Latest_Event_Attended__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Latest_Event_Attended__c</fullName>
    <label>Latest Event Attended</label>
    <length>70</length>
    <type>Text</type>
</CustomField>