force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Latest_Event_Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Latest_Event_Attended_Date__c</fullName>
    <label>Latest Event Attended Date</label>
    <type>Date</type>
</CustomField>