force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Latest_Task__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Latest_Task__c</fullName>
    <label>Latest Task</label>
    <length>70</length>
    <type>Text</type>
</CustomField>