force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__This_Year_vs_Last_Year_Difference__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__This_Year_vs_Last_Year_Difference__c</fullName>
    <description>The total amount difference of this years vs last years tax deductible income</description>
    <formula>OneCRM__YTD_Income_Summary__c  -  OneCRM__Last_Year_Income_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YOY Income Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>