force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Total_Giving_Last_5_Years__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Total_Giving_Last_5_Years__c</fullName>
    <formula>NULLVALUE(OneCRM__YTD_Donation_Summary__c, 0) +
		NULLVALUE(OneCRM__Last_Year_Donation_Summary__c, 0) +
		NULLVALUE(OneCRM__Two_Years_Ago_Donation_Summary__c, 0) +
		NULLVALUE(OneCRM__Three_Years_Ago_Donation_Summary__c, 0) +
		NULLVALUE(OneCRM__Four_Years_Ago_Donation_Summary__c, 0) +
		NULLVALUE(OneCRM__Five_Years_Ago_Donation_Summary__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Grow Gelt 5 Year Totals</inlineHelpText>
    <label>Total Giving (Last 5 Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>