force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Total_number_of_events_attended__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Total_number_of_events_attended__c</fullName>
    <label>Total Number of Events Attended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>