force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Total_Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Total_Number_of_Tasks__c</fullName>
    <label>Total Number of Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>