force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Total_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Total_Outstanding_Balance__c</fullName>
    <label>Total Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>