force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__Two_Years_Ago_Donation_Summary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Two_Years_Ago_Donation_Summary__c</fullName>
    <label>2 Years ago donation summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>