force-app/main/default/objects/OneCRM__Snapshot__c/fields/OneCRM__YTD_Income_Summary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__YTD_Income_Summary__c</fullName>
    <label>YTD Income summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>